--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2> Marc Rodríguez Torres</h2>
-        <p>Sóc <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer">Disenyador</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+        <p>Sóc <span class="typed" data-typed-items="Disenyador, Tecnic, Resolutiu">Disenyador</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
 
     </section><!-- / Section -->
@@ -92,7 +92,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Sobre mi</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p>Estudiant del Cicle Formatiu de Grau Mitjà en Sistemes Microinformàtics i Xarxes (SMX) amb motivació per sortir amb aquest títol amb interès per trobar un treball adequat amb les meves qualitats amb perspectives de treballar en una empresa bona.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -102,11 +102,7 @@
             <img src="assets/img/marc.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
-            <h2>UI/UX Designer &amp; Web Developer.</h2>
-            <p class="fst-italic py-3">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
-            </p>
+            <h2>Dades Personals</h2>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
