--- a/index.html
+++ b/index.html
@@ -120,8 +120,7 @@
               </div>
             </div>
             <p class="py-3">
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
+              Actualment visc a Salamanca i treballo en una petita empresa de manera que practico mentres estudio el cicle.
             </p>
           </div>
         </div>
