--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <li><a href="#Perfil Professional"><i class="bi bi-file-earmark-text navicon"></i> Perfil Professional</a></li>
         <li><a href="#Dades Laborals"><i class="bi bi-images navicon"></i> Dades Laborals</a></li>
         <li><a href="#Idiomas"><i class="bi bi-hdd-stack navicon"></i> Idiomas</a></li>
-        <li><a href="#contacte"><i class="bi bi-envelope navicon"></i> Contacte</a></li>
+        <li><a href="#Contacte"><i class="bi bi-envelope navicon"></i> Contacte</a></li>
       </ul>
     </nav>
 
@@ -676,7 +676,7 @@
     </section><!-- /Testimonials Section -->
 
     <!-- Contacte Section -->
-    <section id="contacte" class="contacte section">
+    <section id="Contacte" class="Contacte section">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
@@ -720,7 +720,7 @@
           </div>
 
           <div class="col-lg-7">
-            <form action="forms/contacte.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+            <form action="forms/Contacte.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
 
                 <div class="col-md-6">
