--- a/index.html
+++ b/index.html
@@ -140,8 +140,7 @@
             <div class="stats-item">
               <i class="bi bi-emoji-smile"></i>
               <span data-purecounter-start="0" data-purecounter-end="286" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Horas en Aplicacions Ofimàtiques
-              </strong> </p>
+              <p><strong>Horas en Aplicacions Ofimàtiques</strong> </p>
             </div>
           </div><!-- End Stats Item -->
 
@@ -165,8 +164,7 @@
             <div class="stats-item">
               <i class="bi bi-people"></i>
               <span data-purecounter-start="0" data-purecounter-end="120" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Horas en Seguretat Informàtica
-              </strong></p>
+              <p><strong>Horas en Seguretat Informàtica</strong></p>
             </div>
           </div><!-- End Stats Item -->
 
