--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 
   <main class="main">
 
-    <!-- Hero Section -->
-    <section id="hero" class="hero section dark-background">
+    <!-- Inici Section -->
+    <section id="Inici" class="Inici">
 
       <img src="assets/img/marc1.JPG" alt="" data-aos="fade-in" class="">
 
