--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="#Inicio" class="active"><i class="bi bi-house navicon"></i>Inicio</a></li>
+        <li><a href="#Inici" class="active"><i class="bi bi-house navicon"></i>Inici</a></li>
         <li><a href="#Sobre mi"><i class="bi bi-person navicon"></i> Sobre mi</a></li>
         <li><a href="#Perfil Professional"><i class="bi bi-file-earmark-text navicon"></i> Perfil Professional</a></li>
         <li><a href="#Dades Laborals"><i class="bi bi-images navicon"></i> Dades Laborals</a></li>
@@ -74,8 +74,8 @@
 
   <main class="main">
 
-    <!-- Hero Section -->
-    <section id="inici" class="inici">
+    <!-- Inici Section -->
+    <section id="Inici" class="Inici section dark-background">
 
       <img src="assets/img/marc1.JPG" alt="" data-aos="fade-in" class="">
 
