--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="#Inici" class="active"><i class="bi bi-house navicon"></i>Inici</a></li>
+        <li><a href="#Inicio" class="active"><i class="bi bi-house navicon"></i>Inicio</a></li>
         <li><a href="#Sobre mi"><i class="bi bi-person navicon"></i> Sobre mi</a></li>
         <li><a href="#Perfil Professional"><i class="bi bi-file-earmark-text navicon"></i> Perfil Professional</a></li>
         <li><a href="#Dades Laborals"><i class="bi bi-images navicon"></i> Dades Laborals</a></li>
@@ -74,8 +74,8 @@
 
   <main class="main">
 
-    <!-- Inici Section -->
-    <section id="Inici" class="Inici section dark-background">
+    <!-- Hero Section -->
+    <section id="hero" class="hero section dark-background">
 
       <img src="assets/img/marc1.JPG" alt="" data-aos="fade-in" class="">
 
@@ -164,7 +164,8 @@
             <div class="stats-item">
               <i class="bi bi-people"></i>
               <span data-purecounter-start="0" data-purecounter-end="120" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Horas en Seguretat Informàtica</strong></p>
+              <p><strong>Horas en Seguretat Informàtica
+</strong></p>
             </div>
           </div><!-- End Stats Item -->
 
