--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Edad:</strong> <span>18</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Nivell:</strong> <span>Estudiante</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Gmail:</strong> <span>pit.piton@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Gmail:</strong> <span>marc.rodriguez@iaballester.cat</span></li>
                 </ul>
               </div>
             </div>
             <p class="py-3">
-              Actualment visc a Salamanca i treballo en una petita empresa de manera que practico mentres estudio el cicle.
+              Actualment visc a Salamanca i treballo en una petita empresa de manera que practico mentres estudio el cicle d'informatica.
             </p>
           </div>
         </div>
@@ -176,11 +176,11 @@
     </section><!-- /Stats Section -->
 
     <!-- Skills Section -->
-    <section id="skills" class="skills section light-background">
+    <section id="Perfil Professional" class="Perfil Professional section light-background">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Skills</h2>
+        <h2>Perfil Professional</h2>
         <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
       </div><!-- End Section Title -->
 
@@ -245,11 +245,11 @@
     </section><!-- /Skills Section -->
 
     <!-- Resume Section -->
-    <section id="resume" class="resume section">
+    <section id="Dades Laborals" class="Dades Laborals section">
 
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Resume</h2>
+      <div class="Dades Laborals section-title" data-aos="fade-up">
+         <h2> Dades Laborals</h2>
         <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
       </div><!-- End Section Title -->
 
@@ -321,12 +321,12 @@
 
     </section><!-- /Resume Section -->
 
-    <!-- Portfolio Section -->
-    <section id="portfolio" class="portfolio section light-background">
+    <!-- Idiomas Section -->
+    <section id="Idiomas" class="Idiomas section light-background">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Portfolio</h2>
+        <h2>Idiomas</h2>
         <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
       </div><!-- End Section Title -->
 
@@ -340,7 +340,7 @@
             <li data-filter=".filter-product">Product</li>
             <li data-filter=".filter-branding">Branding</li>
             <li data-filter=".filter-books">Books</li>
-          </ul><!-- End Portfolio Filters -->
+          </ul><!-- End Idiomas Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
