--- a/index.html
+++ b/index.html
@@ -337,6 +337,29 @@
               </div>
             </div><!-- End Portfolio Item -->
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+              <div class="portfolio-content h-100">
+                <img src="assets/Projectes/Xarxas.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Cospace</h4>
+                  <p>He creat una xarxa per una empresa gran per que aixi tinguin red.</p>
+                  <a href="assets/Projectes/Xarxas.png" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+              <div class="portfolio-content h-100">
+                <img src="assets/Projectes/Tienda.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Cospace</h4>
+                  <p>He creat una tenda de coses utils en un triatlon gràcies al wordpress</p>
+                  <a href="assets/Projectes/Tienda.png" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
            
             </div><!-- End Portfolio Item -->
 
