--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                 <div class="portfolio-info">
                   <h4>Cospace</h4>
                   <p>He creat un joc educatiu per ajudar a reciclar per no cantaminar el mar amb cospace</p>
-                  <a href="assets/Projectes/Cospace.png.png" title="filter-product 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/Projectes/Cospace.png.png" title="Product 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -355,7 +355,7 @@
                 <div class="portfolio-info">
                   <h4>Cospace</h4>
                   <p>He creat una tenda de coses utils en un triatlon gràcies al wordpress</p>
-                  <a href="assets/Projectes/Tienda.png" title="App 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/Projectes/Tienda.png" title="App 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
