--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                 <div class="portfolio-info">
                   <h4>Pàgina web</h4>
                   <p>He creat una pàgina web de compra de roba on explico i exposo tot el de Rimberio shop.</p>
-                  <a href="assets/Projectes/Rimberio.png.png" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/Projectes/Rimberio.png.png" title="filter-app 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -319,7 +319,7 @@
                 <div class="portfolio-info">
                   <h4>Objecte 3D</h4>
                   <p>He creat un objecte amb peces 3D per fer un armari rotatori per poder elegir més còmode la roba que vulguis.</p>
-                  <a href="assets/Projectes/3D.png.png" title="Branding 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/Projectes/3D.png.png" title="filter-branding 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -331,7 +331,7 @@
                 <div class="portfolio-info">
                   <h4>Cospace</h4>
                   <p>He creat un joc educatiu per ajudar a reciclar per no cantaminar el mar amb cospace</p>
-                  <a href="assets/Projectes/Cospace.png.png" title="Product 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/Projectes/Cospace.png.png" title="filter-product 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -341,9 +341,9 @@
               <div class="portfolio-content h-100">
                 <img src="assets/Projectes/Xarxas.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Cospace</h4>
+                  <h4>Xarxa</h4>
                   <p>He creat una xarxa per una empresa gran per que aixi tinguin red.</p>
-                  <a href="assets/Projectes/Xarxas.png" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/Projectes/Xarxas.png" title="filter-branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -353,9 +353,9 @@
               <div class="portfolio-content h-100">
                 <img src="assets/Projectes/Tienda.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Cospace</h4>
+                  <h4>Tenda web</h4>
                   <p>He creat una tenda de coses utils en un triatlon gràcies al wordpress</p>
-                  <a href="assets/Projectes/Tienda.png" title="App 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/Projectes/Tienda.png" title="filter-app 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
