--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
                 <img src="assets/Projectes/3D.png.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -325,7 +325,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
                 <img src="assets/Projectes/Cospace.png.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -349,7 +349,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
                 <img src="assets/Projectes/Tienda.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
