--- a/index.html
+++ b/index.html
@@ -320,6 +320,8 @@
                   <h4>Objecte 3D</h4>
                   <p>He creat un objecte amb peces 3D per fer un armari rotatori per poder elegir més còmode la roba que vulguis.</p>
                   <a href="assets/Projectes/3D.png.png" title="filter-branding 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/Projectes/Pieza1.png" title="filter-branding 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/Projectes/Pieza2.png" title="filter-branding 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
