--- a/index.html
+++ b/index.html
@@ -334,6 +334,9 @@
                   <h4>Cospace</h4>
                   <p>He creat un joc educatiu per ajudar a reciclar per no cantaminar el mar amb cospace</p>
                   <a href="assets/Projectes/Cospace.png.png" title="filter-product 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/Projectes/Juego1.png" title="filter-product 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/Projectes/Juego2.png" title="filter-product 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/Projectes/Juego3.png" title="filter-product 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
