--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <main class="main">
 
     <!-- Hero Section -->
-    <section id="hero" class="hero section dark-background">
+    <section id="Inicio" class="hero section dark-background">
 
       <img src="assets/img/marc1.JPG" alt="" data-aos="fade-in" class="">
 
@@ -300,7 +300,6 @@
                   <h4>Pàgina web</h4>
                   <p>He creat una pàgina web de compra de roba on explico i exposo tot el de Rimberio shop.</p>
                   <a href="assets/Projectes/Rimberio.png.png" title="filter-app 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -314,7 +313,6 @@
                   <a href="assets/Projectes/3D.png.png" title="filter-branding 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="assets/Projectes/Pieza1.png" title="filter-branding 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="assets/Projectes/Pieza2.png" title="filter-branding 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -329,7 +327,7 @@
                   <a href="assets/Projectes/Juego1.png" title="filter-product 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="assets/Projectes/Juego2.png" title="filter-product 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="assets/Projectes/Juego3.png" title="filter-product 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="https://edu.delightex.com/Studio/Space/1G7HGX6lCXMfDdei" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -341,7 +339,6 @@
                   <h4>Xarxa</h4>
                   <p>He creat una xarxa per una empresa gran per que aixi tinguin red.</p>
                   <a href="assets/Projectes/Xarxas.png" title="filter-branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -353,11 +350,24 @@
                   <h4>Tenda web</h4>
                   <p>He creat una tenda de coses utils en un triatlon gràcies al wordpress</p>
                   <a href="assets/Projectes/Tienda.png" title="filter-app 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
-           
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+              <div class="portfolio-content h-100">
+                <img src="assets/Projectes/lqsa.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>La que se avecina</h4>
+                  <p>He creat junt amb uns companys un joc en pygame amb la tematica de la que se avecina.</p>
+                  <a href="assets/Projectes/fondolqsa.png" title="Planta 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/Projectes/fondolqsa2.png" title="Planta 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/Projectes/enrique.png" title="Un personaje" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://github.com/lluisjor/Projecto-pygame-" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
             </div><!-- End Portfolio Item -->
 
             
@@ -387,7 +397,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="icon flex-shrink-0"><i class="bi bi-briefcase"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Pàgina web senzilla</a></h4>
+              <h4 class="title"><a href="service-details.html">Pàgina web senzilla</a></h4>
               <p class="description">25.00€</p>
             </div>
           </div>
@@ -396,7 +406,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
             <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Videojoc amb python senzill</a></h4>
+              <h4 class="title"><a href="service-details.html">Videojoc amb python senzill</a></h4>
               <p class="description">35.00€</p>
             </div>
           </div><!-- End Service Item -->
@@ -404,7 +414,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
             <div class="icon flex-shrink-0"><i class="bi bi-bar-chart"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Disseny i impressió 3D</a></h4>
+              <h4 class="title"><a href="service-details.html">Disseny i impressió 3D</a></h4>
               <p class="description">75.00€</p>
             </div>
           </div><!-- End Service Item -->
@@ -412,7 +422,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
             <div class="icon flex-shrink-0"><i class="bi bi-binoculars"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Montar un ordinador amb disseny</a></h4>
+              <h4 class="title"><a href="service-details.html" >Montar un ordinador amb disseny</a></h4>
               <p class="description">150.00€</p>
             </div>
           </div><!-- End Service Item -->
@@ -420,7 +430,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
             <div class="icon flex-shrink-0"><i class="bi bi-brightness-high"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Videojoc amb Coespaces</a></h4>
+              <h4 class="title"><a href="service-details.html">Videojoc amb Coespaces</a></h4>
               <p class="description">40.00€</p>
             </div>
           </div><!-- End Service Item -->
@@ -428,7 +438,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
             <div class="icon flex-shrink-0"><i class="bi bi-calendar4-week"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Disseny de xarxa red</a></h4>
+              <h4 class="title"><a href="service-details.html" >Disseny de xarxa red</a></h4>
               <p class="description">100.00€</p>
             </div>
           </div><!-- End Service Item -->
