--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
                   <span>Molt bon company, sempre ajuda a tothom.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/ramon.jpg" class="testimonial-img" alt="">
                 <h3>Raul Martinez</h3>
                 <h4>Company</h4>
               </div>
@@ -508,7 +508,7 @@
                   <span>El millor company que es pot tindre.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/pit.jpg" class="testimonial-img" alt="">
                 <h3>Jordi Lluis (PIT)</h3>
                 <h4>Company</h4>
               </div>
@@ -521,7 +521,7 @@
                   <span>Bon company i amic.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/Edgar.jpg" class="testimonial-img" alt="">
                 <h3>Edgar Pedret</h3>
                 <h4>Company</h4>
               </div>
@@ -531,10 +531,10 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.</span>
+                  <span>Es molt bon treballador i sempre es preocupa per els demes.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/kristo.jpg" class="testimonial-img" alt="">
                 <h3>Kristopher Gonzalez</h3>
                 <h4>Company</h4>
               </div>
@@ -547,7 +547,7 @@
                   <span>Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/javier.jpg" class="testimonial-img" alt="">
                 <h3>Javi Jaca</h3>
                 <h4>Company</h4>
               </div>
