--- a/index.html
+++ b/index.html
@@ -368,6 +368,20 @@
               </div>
             </div><!-- End Portfolio Item -->
 
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+              <div class="portfolio-content h-100">
+                <img src="assets/Projectes/Pc1.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Pc 3D</h4>
+                  <p>He creat un PC en un setup en sketchup.</p>
+                  <a href="assets/Projectes/Pc2.png" title="filter-branding 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/Projectes/Pc3.png" title="filter-branding 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/Projectes/Pc4.png" title="filter-branding 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
             </div><!-- End Portfolio Item -->
 
             
