--- a/index.html
+++ b/index.html
@@ -375,9 +375,9 @@
                 <div class="portfolio-info">
                   <h4>Pc 3D</h4>
                   <p>He creat un PC en un setup en sketchup.</p>
-                  <a href="assets/Projectes/Pc2.png" title="filter-branding 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="assets/Projectes/Pc3.png" title="filter-branding 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="assets/Projectes/Pc4.png" title="filter-branding 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/Projectes/Pc2.png"  data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/Projectes/Pc3.png"  data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/Projectes/Pc4.png"  data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
