--- a/index.html
+++ b/index.html
@@ -382,6 +382,19 @@
               </div>
             </div><!-- End Portfolio Item -->
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+              <div class="portfolio-content h-100">
+                <img src="assets/Projectes/Robot1.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Robot 3D</h4>
+                  <p>He creat un Robot en forma de F1, fent que sigui un seguidor de linies.</p>
+                  <a href="assets/Projectes/Robot2.png"  data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/Projectes/Robot3.png"  data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/Projectes/Robot4.png"  data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
             </div><!-- End Portfolio Item -->
 
             
