--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
+  <div class="progress">
+              <span class="skill"><span>CSS</span> <i class="val">10%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
+
+            
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
