--- a/index.html
+++ b/index.html
@@ -24,14 +24,8 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <div class="progress">
-              <span class="skill"><span>CSS</span> <i class="val">10%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div><!-- End Skills Item -->
 
-            
+
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
@@ -106,14 +100,14 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Cumpleaños:</strong> <span>1 de enero del 2006</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+34 666 84 76 95</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Ciudad:</strong> <span>Salamanca, España</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Cumpleanys:</strong> <span>10 de julio del 2006</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Telefon:</strong> <span>+34 684 00 69 75</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Ciutat:</strong> <span>Salamanca, España</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Edad:</strong> <span>18</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Edat:</strong> <span>18</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Nivell:</strong> <span>Estudiante</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Gmail:</strong> <span>marc.rodriguez@iaballester.cat</span></li>
                 </ul>
